[package]
name = "voyage"
version = "0.0.1"
edition = "2021"
authors = ["Dikshant Chandel <dikshant@clickswave.org>"]

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
anyhow = "1.0.79"
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "macros", "json"] }
chrono = { version = "0.4.38", features = ["serde"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
sha2 = "0.10.8"
uuid = { version = "1.15.1", features = ["fast-rng", "v4"] }
hickory-resolver = { version = "0.25.1" }
reqwest = { version = "0.12.12", features = ["json"] }
textwrap = "0.16.2"
csv = "1.3.1"
whoami = { version = "1.2.0" }
rand = "0.9.0"